--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,13 @@
 <footer class="footer-promo">
   <div class="container center">
-    <h1 class="h1"><b>It’s made for you, by you.</b></h1>
+    <h1 class="h2"><b>It’s made for you, by you.</b></h1>
     <div class="break--half"></div>
-    <a href="/pricing" class="btn btn--primary">Try Chorale for free</a>
-    <a href="/contact" class="btn btn--border">
-      Ask us a question
-    </a>
+    <div class="btn-group">
+      <a href="/pricing" class="btn btn--primary">Try Chorale for free</a>
+      <a href="/contact" class="btn btn--border">
+        Ask us a question
+      </a>
+    </div>
   </div>
 </footer>
 
@@ -24,7 +26,7 @@
     </div>
     <div class="break"></div>
 
-  <div class="row center">
+  <div class="row mobile-row center">
     <figure class="col">
       <h1 class="h4"><b>Group</b></h1>
 
@@ -43,7 +45,11 @@
 
       <ul class="no-bullet">
         <li class="h5"><a href="/pricing">Pricing</a></li>
-        <li class="h5"><a href="https://status.choraleapp.com">Status</a></li>
+        <li class="h5"><a href="https://status.choraleapp.com">Status
+          <svg viewBox="0 0 24 24">
+            <path fill="#fff" d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+          </svg>
+        </a></li>
         <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Help</a></li>
         <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Download</a></li>
         <li class="h5"><a href="/creators">Creators</a></li>
