--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -18,9 +18,9 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <!-- Metadata -->
-    <title>{{ if eq .Title .Site.Title }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
+  <title>{{ if eq .Title .Site.Title }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
     <meta property="og:title" content="{{ .Title }}">
     <meta name="description" content="{{ if .Params.description }}{{ .Params.description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
     <meta name="canonical" content="{{ .Permalink }}">
-    <meta name="theme-color" content="#1f1f1f">
+    <meta name="theme-color" content="#dedede">
   </head>
