--- a/layouts/partials/nav-light.html
+++ b/layouts/partials/nav-light.html
@@ -5,15 +5,15 @@
       <path class="nav-bar__icon--close" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
     </svg>
 
-    <a href="/#">
-      <img src="/logo.png" class="nav-bar__logo">
+    <a href="/#" class="nav-bar__logo">
+      <img src="/logo.png">
     </a>
 
     <ul class="nav-bar__list">
-      <li><a href="/#explain">Features</a></li>
+      <li><a href="/tour">Features</a></li>
       <li><a href="/pricing">Pricing</a></li>
       <li><a href="/creators">Creators</a></li>
-      <li><a href="/blog">Newsroom</a></li>
+      <li><a href="/blog">News</a></li>
       <li><a href="/contribute">Contribute</a></li>
       <!-- li><a href="/account">Login
         <svg viewBox="0 0 24 24">
