--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,13 +2,13 @@
 <body class="index">
 {{ partial "nav-light.html" . }}
 <!-- Content -->
-<main class="hero background" style="background-image: linear-gradient(135deg, rgba(0,0,0,1), rgba(0,0,0,0.0)), url(/img/guitarist.jpeg)"> <!--  -->
+<main class="hero background" style="background-image: linear-gradient(135deg, rgba(0,0,0,1), rgba(0,0,0,0.0)), url(/img/hero.gif)"> <!--  -->
   <div class="container">
   <div class="row">
   <!---->
   <div class="col">
     <h1 class="h1">
-      <b>Chorale is a competition-killing music app made for everyone, by everyone.</b>
+      <b>Chorale is the modern music app made for everyone, by everyone. It’s free.</b>
     </h1>
     <p>Spotify, Google, and SoundCloud don’t listen to you. So why not fix that? Unsubscribe from Spotify and uninstall SoundCloud, because Chorale
        is the first-ever music streaming platform that caters to users and not greedy executives.</p>
