--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ partial "meta.html" . }}
 <body class="index">
-{{ partial "nav.html" . }}
+{{ partial "nav-light.html" . }}
 <!-- Content -->
 
-<main class="hero center-mobile">
+<!-- main class="hero hero--flat">
   <div class="container">
   <div class="row">
     <figure class="col">
@@ -27,10 +27,10 @@
     </figure>
   </div>
   </div>
-</main>
+</main -->
 
 
-<!-- CD BG
+
 <main class="hero background" style="background-image: linear-gradient(135deg, rgba(0,0,0,1), rgba(0,0,0,0.0)), url(/img/cd.gif)">
   <div class="container">
   <div class="row">
@@ -53,7 +53,7 @@
   </div>
   </div>
 </main>
--->
+
 
 <section class="container">
   <div class="break"></div><div class="break"></div><div class="break"></div>
