--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,7 +9,7 @@
 
       {{ partial "nav-items.html" . }}
 
-      <li class="nav-bar__cta"><a href="https://the.choraleapp.com">Launch Chorale
+      <li class="nav-bar__cta"><a href="/early-access">Get Chorale
         <svg viewBox="0 0 24 24">
           <path d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" />
         </svg>
