--- a/src/scss/components/root.scss
+++ b/src/scss/components/root.scss
@@ -12,6 +12,11 @@ mark {
   color: invert($bold-text-color);
 }
 
+hr {
+  border: 0;
+  border-bottom: 0.1rem solid rgba($bold-text-color, 0.125);
+}
+
 svg {
   height: 1rem;
   width: 1rem;
