Updated, simpler pricing page design

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,35 +2,6 @@
 <body class="index">
 {{ partial "nav-light.html" . }}
 <!-- Content -->
-
-<!-- main class="hero hero--flat">
-  <div class="container">
-  <div class="row">
-    <figure class="col">
-      <h1 class="h1">
-        <b>Chorale is the free &amp; modern music app made for everyone, by everyone.</b>
-      </h1>
-      <p>Spotify, Google, and SoundCloud don’t listen to you. So why not fix that? Unsubscribe from Spotify and uninstall SoundCloud, because Chorale
-         is the first-ever music streaming platform that caters to users and not greedy executives.</p>
-
-      <div class="break-sm"></div>
-      <div class="btn-group">
-        <a href="/early-access" class="btn btn--black">Gimme the app</a>
-        <a href="/tour" class="btn btn--border">Tell me more</a>
-      </div>
-
-      <p><small>
-        <a class="hero__promo" href="https://dribbble.com/shots/2863164-Anya-Hindmarch">animation art by Magnus Magnusson</a></small></p>
-    </figure>
-    <figure class="col">
-      <img src="/img/home-anim.gif" class="stretch-img">
-    </figure>
-  </div>
-  </div>
-</main -->
-
-
-
 <main class="hero background" style="background-image: linear-gradient(135deg, rgba(0,0,0,1), rgba(0,0,0,0.0)), url(/img/cd.gif)">
   <div class="container">
   <div class="row">
@@ -44,7 +15,7 @@
 
     <div class="break-sm"></div>
     <div class="btn-group">
-      <a href="/early-access" class="btn btn--primary">Gimme the app</a>
+      <a href="/early-access" class="btn btn--white">Gimme the app</a>
       <a href="/tour" class="btn btn--border">Tell me more</a>
     </div>
   </div>
